@@ -1,5 +1,8 @@
 2009-10-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
+	* synchronizer.cc (Synchronizer::nextCommunication): Handle
+	tight loops (maxBuffered == 0) of spike events.
+
 	* temporal.cc (TemporalNegotiator::combineParameters): Correctly
 	take MAX_BUFFERED_NO_VALUE arguments into consideration.
 
